--- a/src/conponent/NewCollections/NewCollection.css
+++ b/src/conponent/NewCollections/NewCollection.css
@@ -2,9 +2,8 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 10px;
-  /* height: 90vh; */
   border: 1px solid #000;
+  margin-bottom: 100px;
 }
 .NewCollection h1 {
   color: #171717;
@@ -21,5 +20,5 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   margin-top: 50px;
-  gap: 30px;
+  gap: 0px 30px;
 }
