--- a/src/conponent/popular/Popular.css
+++ b/src/conponent/popular/Popular.css
@@ -3,8 +3,7 @@
   align-items: center;
   flex-direction: column;
   gap: 10px;
-  /* height: 90vh; */
-  border: 1px solid #000;
+  margin-bottom: 100;
 }
 .popular h1 {
   color: #171717;
@@ -18,7 +17,7 @@
   background-color: #252525;
 }
 .popular_item {
-  margin: 50px auto;
+  margin-top: 50px;
   display: flex;
   gap: 30px;
   flex-wrap: wrap;
