--- a/src/conponent/NewCollections/NewCollection.css
+++ b/src/conponent/NewCollections/NewCollection.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  border: 1px solid #000;
   margin-bottom: 100px;
 }
 .NewCollection h1 {
@@ -20,5 +19,5 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   margin-top: 50px;
-  gap: 0px 30px;
+  gap: 30px;
 }
