--- a/src/conponent/item/Item.css
+++ b/src/conponent/item/Item.css
@@ -31,3 +31,29 @@
   transform: scale(1.05);
   transition: 0.6s;
 }
+
+/* media query only */
+
+@media (max-width: 1280px) {
+  .item {
+    width: 220px;
+    font-size: 14px;
+  }
+}
+@media (max-width: 1024px) {
+  .item {
+    width: 170px;
+    font-size: 13px;
+  }
+}
+@media (max-width: 800px) {
+  .item {
+    width: 120px;
+    font-size: 12px;
+  }
+}
+@media (max-width: 500px) {
+  .item {
+    width: 160px;
+  }
+}
