--- a/src/conponent/NewCollections/NewCollection.css
+++ b/src/conponent/NewCollections/NewCollection.css
@@ -16,8 +16,21 @@
   background-color: #252525;
 }
 .collections {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
   margin-top: 50px;
   gap: 30px;
+}
+
+@media (max-width: 1024px) {
+  .NewCollection h1 {
+    font-size: 35px;
+  }
+}
+@media (max-width: 800px) {
+  .NewCollection h1 {
+    font-size: 25px;
+  }
 }
