--- a/src/conponent/footer/Footer.css
+++ b/src/conponent/footer/Footer.css
@@ -53,3 +53,30 @@
   height: 3px;
   background: #c7c7c7;
 }
+@media (max-width: 600px) {
+  .footer_links {
+    gap: 30px;
+    font-size: 15px;
+  }
+  .footer_logo p {
+    font-weight: 600;
+    font-size: 30px;
+  }
+  .footer_copyright {
+    font-size: 16px;
+    font-weight: 600;
+  }
+}
+@media (max-width: 400px) {
+  .footer_links {
+    gap: 10px;
+  }
+  .footer_logo p {
+    font-weight: 500;
+    font-size: 20px;
+  }
+  .footer_copyright {
+    font-size: 12px;
+    font-weight: 500;
+  }
+}
