--- a/src/conponent/hero/Hero.css
+++ b/src/conponent/hero/Hero.css
@@ -1,7 +1,7 @@
 .hero {
-  /* height: 100vh; */
   background: linear-gradient(180deg, #fde1ff, #e1ffea22 60%);
   display: flex;
+  margin-bottom: 50px;
 }
 .hero_left {
   flex: 1;
@@ -57,3 +57,46 @@
   height: 100%;
   object-fit: contain;
 }
+
+/* media query */
+
+@media (max-width: 1280px) {
+  .hero_left {
+    padding-left: 140px;
+  }
+  .hero_left h2 {
+    font-size: 22px;
+  }
+  .hero_left p {
+    font-size: 30px;
+  }
+  .hand_Icon img {
+    width: 60px;
+  }
+  .hero_latest_btn {
+    gap: 10px;
+    width: 250px;
+    height: 60px;
+    margin-top: 20px;
+    font-size: 18px;
+  }
+}
+
+/* @media(max-width:1024px){
+
+} */
+/* @media(max-width:800px){
+
+} */
+
+/* @media(max-width:500px){
+
+} */
+
+/* @media(max-width:1280px){
+
+} */
+
+/* @media(max-width:1280px){
+
+} */
