--- a/src/conponent/navbar/Navbar.css
+++ b/src/conponent/navbar/Navbar.css
@@ -8,7 +8,7 @@
   padding: 16px;
   box-shadow: 0 1px 3px -2px black;
 }
-.navbar .nav_logo {
+.nav_logo {
   display: flex;
   align-items: center;
   gap: 20px;
@@ -17,7 +17,7 @@
   display: flex;
   align-items: center;
   gap: 30px;
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 500;
 }
 .nav_menu a {
@@ -71,7 +71,7 @@
   display: none;
 }
 /* media query code only */
-@media screen and (max-width: 1280px) {
+@media (max-width: 1280px) {
   .navbar {
     padding: 12px;
   }
@@ -83,7 +83,7 @@
   }
   .nav_menu {
     gap: 20px;
-    font-size: 16px;
+    font-size: 20px;
   }
   .nav_login_cart {
     gap: 30px;
@@ -97,13 +97,13 @@
     font-size: 12px;
   }
 }
-@media screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
   .nav_logo img {
     width: 40px;
   }
   .nav_menu {
     gap: 15px;
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .nav_login_cart button {
@@ -119,18 +119,18 @@
     width: 30px;
   }
 }
-@media screen and (max-width: 800px) {
+@media (max-width: 800px) {
   .navbar {
     padding: 10px;
   }
   .nav_dropDown {
     display: block;
-    width: 20px;
-    height: 20px;
+    width: 38px;
+    height: 35px;
     rotate: -90deg;
     transition: 0.5s;
     object-fit: contain;
-    margin-top: 14px;
+    margin-top: 8px;
     cursor: pointer;
   }
   .nav_menu {
@@ -149,12 +149,13 @@
     transform: rotate(90deg);
   }
 }
-@media screen and (max-width: 1280px) {
+@media (max-width: 500px) {
   .navbar {
     width: 8px 0;
     gap: 0;
   }
   .nav_logo {
+    gap: 10px;
     transform: scale(0.8);
   }
   .nav_menu {
@@ -163,10 +164,10 @@
   }
   .nav_login_cart {
     transform: scale(0.8);
+    gap: 10px;
+  }
+  .nav_cart_count {
+    margin-left: -20px;
+    margin-bottom: 4px;
   }
 }
-/* @media screen and (max-width: 768px) {
-  .nav_menu {
-    display: none;
-  }
-} */
