--- a/src/conponent/NewCollections/NewCollection.css
+++ b/src/conponent/NewCollections/NewCollection.css
@@ -8,6 +8,7 @@
   color: #171717;
   font-size: 50px;
   font-weight: 600;
+  margin-bottom: 5px;
 }
 .NewCollection hr {
   width: 200px;
@@ -32,5 +33,9 @@
 @media (max-width: 800px) {
   .NewCollection h1 {
     font-size: 25px;
+  }
+  .NewCollection hr {
+    height: 3px;
+    width: 150px;
   }
 }
