--- a/src/conponent/cartItem/CartItem.css
+++ b/src/conponent/cartItem/CartItem.css
@@ -15,6 +15,7 @@
   color: #454545;
   font-size: 18px;
   font-weight: 600;
+  text-align: center;
 }
 .cartItem_format {
   font-size: 17px;
@@ -97,4 +98,82 @@
   cursor: pointer;
   outline: none;
   border: none;
+}
+
+/* media query code only */
+
+@media (max-width: 1024px) {
+  .cartItems_totals {
+    margin-right: 120px;
+  }
+}
+@media (max-width: 800px) {
+  .cartItems {
+    margin: 100px 30px;
+  }
+  .cartItems_format_main {
+    grid-template-columns: 0.5fr 1.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
+    font-size: 15px;
+    gap: 10px;
+  }
+  .cartItemQuentity {
+    width: 44px;
+    height: 44px;
+  }
+  .cartItems_down {
+    flex-direction: column;
+    gap: 40px 0;
+  }
+  .cartItems_totals {
+    /* width: 400px; */
+    min-width: 300px;
+    margin: 0 auto;
+  }
+  .cartItems_totals h1 {
+    font-size: 25px;
+  }
+  .cartItems_total_items h3 {
+    font-size: 13px;
+  }
+  .cartItems_total_items p {
+    font-size: 14px;
+  }
+  .cartItems_promocode {
+    margin: 0 auto;
+  }
+  .cartItems_totals button {
+    width: 210px;
+    height: 40px;
+    border-radius: 20px;
+  }
+  .cartItems_promocode p {
+    font-size: 14px;
+  }
+  .cartItems_promobox {
+    width: 300px;
+    padding-left: 5px;
+    height: 40px;
+  }
+  .cartItems_promobox input {
+    width: 235px;
+    height: 40px;
+    font-size: 14px;
+  }
+  .cartItems_promobox button {
+    width: 60px;
+    height: 40px;
+  }
+}
+
+@media (max-width: 500px) {
+  .cartItems_format_main {
+    font-size: 12px;
+  }
+  .cartItemQuentity {
+    width: 30px;
+    height: 30px;
+  }
+  .cartItems {
+    margin: 100px 10px;
+  }
 }
