--- a/src/conponent/relatedProducts/RelatedProducts.css
+++ b/src/conponent/relatedProducts/RelatedProducts.css
@@ -3,7 +3,6 @@
   align-items: center;
   flex-direction: column;
   gap: 10px;
-  /* height: 90vh; */
 }
 .relatedProduct h1 {
   color: #171717;
@@ -20,4 +19,19 @@
   margin-top: 50px;
   display: flex;
   gap: 30px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 600px) {
+  .relatedProduct h1 {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 400px) {
+  .relatedProduct h1 {
+    font-size: 25px;
+  }
 }
