--- a/src/pages/CSS/LoginSingup.css
+++ b/src/pages/CSS/LoginSingup.css
@@ -24,6 +24,7 @@
   width: 100%;
   padding-left: 20px;
   border: 1px solid #c9c9c9;
+  border-radius: 20px;
   outline: none;
   color: #fc5c5c;
   font-size: 18px;
@@ -59,4 +60,33 @@
   color: #5c5c5c;
   font-size: 18px;
   font-weight: 500;
+}
+
+@media (max-width: 500px) {
+  .loginSingup_container {
+    width: 300px;
+    padding: 10px;
+  }
+  .loginSingup_container h1 {
+    font-size: 25px;
+  }
+  .loginSingup_fields input {
+    height: 26px;
+    padding: 4px 4px 4px 8px;
+    font-size: 14px;
+  }
+  .loginSingup_container button {
+    width: 250px;
+    padding: 10px;
+    font-weight: 600;
+  }
+  .loginSingup_container button p {
+    font-size: 15px;
+  }
+  .loginSingup_agree {
+    font-size: 14px;
+  }
+  .loginSingup_login {
+    font-size: 14px;
+  }
 }
